// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title should render correctly with no props 1`] = `
<styled.div>
  <styled.div />
  <styled.div />
</styled.div>
`;

exports[`Title should render correctly with props 1`] = `
<styled.div>
  <styled.div />
  <styled.div>
    this is a test
  </styled.div>
</styled.div>
`;

exports[`should render correctly with no props 1`] = `
<styled.div>
  <styled.div />
  <styled.div />
</styled.div>
`;

exports[`should render correctly with props 1`] = `
<styled.div>
  <styled.div />
  <styled.div>
    this is a test
  </styled.div>
</styled.div>
`;
